# c_base

./: .clang-format  .gitignore  PKGBUILD  README.md  c_base.pc  c_base.pc.in  meson.build  meson.options  test.txt
docs/: Doxyfile
docs/base/errors/: errors.md
docs/ds/: C_Array.md  C_DArray.md  C_HashTable.md  C_List.md  ds.md  ds_base.md
docs/html/: annotated.html  annotated_dup.js  arena_8h_source.html  arithmetics_8h_source.html  classes.html  dir_27a20d1f0e218a55e8a2f5c833ec5a28.html  dir_27a20d1f0e218a55e8a2f5c833ec5a28.js  dir_35deeb11581879012b21f6bd5147bea2.html  dir_35deeb11581879012b21f6bd5147bea2.js  dir_59281fd2a2d1169e9233d012c335f4e5.html  dir_59281fd2a2d1169e9233d012c335f4e5.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f7949e8a3b2444ebdaa6542d72ac0f02.html  dir_f7949e8a3b2444ebdaa6542d72ac0f02.js  doxygen_crawl.html  ds_8h_source.html  enviroment_8h_source.html  errors_8h.html  errors_8h.js  errors_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  list_8h_source.html  macros_8h.html  macros_8h.js  macros_8h_source.html  mem_8h.html  mem_8h.js  mem_8h_source.html  navtreedata.js  navtreeindex0.js  os__io_8h_source.html  (+30 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_1.js  defines_2.js  defines_3.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js
docs/latex/: refman.tex
include/: meson.build  system.h
include/base/: arena.h  base.h  defines.h  ds.h  errors.h  lists.h  macros.h  mem.h  meson.build  strdef.h  strings.h  types.h  varargs.h
include/base/ds/: list.h  meson.build
include/c_base/: env.h  system.h
include/c_base/base/: arena.h  arithmetics.h  enviroment.h  errors.h  macros.h  math.h  mem.h  strdef.h  strings.h  types.h  varargs.h
include/c_base/base/ds/: ds.h  meson.build
include/c_base/base/errors/: C_EmptyResult.h  C_Result.h  Error.h  errors.h  errors_base.h  results.h
include/c_base/base/memory/: allocator.h  handles.h  memory.h  memory_base.h  objects.h  temp.h
include/c_base/base/strings/: format.h  string_convert.h  string_view.h  strings.h
include/c_base/ds/: C_Array.h  C_DArray.h  C_HashTable.h  C_List.h  array.h  darray.h  ds.h  ds_base.h  hash_table.h  list.h
include/c_base/graphics/: graphics_window.h
include/c_base/os/: os_asm.h  os_atomic.h  os_dylib.h  os_env.h  os_io.h  os_mem.h  os_threads.h
include/os/: meson.build  os.h  os_io.h  os_mem.h
src/: main.c  meson.build  system.c
src/base/: arena.c  arithmetics.c  base.h  base_types.h  defines.h  ds.h  errors.c  list.h  macros.h  math.c  mem.c  mem.h  mem_malloc.c  meson.build  strings.c  strings.h
src/base/ds/: ds.c  list.c
src/base/errors/: C_EmptyResult.c  C_Result.c  Error.c  error_base.c  error_macros.c  errors.c  meson.build  results.c
src/base/memory/: allocator.c  handles.c  memory.c  memory_base.c  meson.build  objects.c  temp.c
src/base/strings/: format.c  meson.build  string_convert.c  string_view.c  strings.c
src/ds/: C_Array.c  C_DArray.c  C_HashTable.c  C_List.c  array.c  darray.c  ds.c  hash_table.c  list.c  meson.build
src/os/: meson.build  os.h  os_dynlib.c  os_env.c  os_io.c  os_mem.c  os_threads.c
src/os/impl/linux/: linux_dynlib.c  linux_io.c  linux_mem.c  linux_mem_base.c  linux_threads.c
src/os/linux/: linux_io.c  linux_threads.c  meson.build
src/os/linux/x86_64/: linux_x86_64_atomic.S  meson.build
test/: meson.build  test_helpers.c  test_helpers.h
test/base/: meson.build  test_errors.c  test_mem.c  test_strings.c  test_types.c  test_varargs.c
test/ds/: meson.build  test_C_Array.c  test_C_DArray.c  test_C_HashTable.c  test_C_List.c
