test_strings = executable('test_strings', 'test_strings.c', link_with: lib, dependencies: cmocka_dep,  include_directories: include_dirs)
test('base/strings 0 creation', test_strings, args: ['0'])
test('base/strings 1 manipulation', test_strings, args: ['1'])
test('base/strings 2 string list', test_strings, args: ['2'])
test('base/strings 3 simple functions', test_strings, args: ['3'])
test('base/strings 4 char checking', test_strings, args: ['4'])
test('base/strings 5 int parsing', test_strings, args: ['5'])

test_types = executable('test_types', 'test_types.c', link_with: lib, dependencies: cmocka_dep,  include_directories: include_dirs)
test('base/types 0 macros', test_types, args: ['0'])

test_mem = executable('test_mem', 'test_mem.c', link_with: lib, dependencies: cmocka_dep,  include_directories: include_dirs)
test('base/mem 0 memory operations', test_mem, args: ['0'])
test('base/mem 1 memory base', test_mem, args: ['1'])
test('base/mem 2 arena initializers', test_mem, args: ['2'])
test('base/mem 3 arena destructors', test_mem, args: ['3'])
test('base/mem 4 arena allocations', test_mem, args: ['4'])
test('base/mem 5 temp arena', test_mem, args: ['5'])
test('base/mem 6 pool initializers', test_mem, args: ['6'])
test('base/mem 7 pool destructors', test_mem, args: ['7'])
test('base/mem 8 pool allocations', test_mem, args: ['8'])
